--- a/pom.xml
+++ b/pom.xml
@@ -63,8 +63,7 @@
         </dependency>
         <dependency>
             <groupId>org.kordamp.ikonli</groupId>
-            <artifactId>ikonli-materialdesign
-                -pack</artifactId>
+            <artifactId>ikonli-materialdesign-pack</artifactId>
             <version>12.3.1</version>
         </dependency>
         <dependency>
